# learnai

./: README.md  requirements.txt
day01/: README.md
day02/: README.md
day03/: README.md  app.py
day04/: README.md  app.py  day04.csv  day04.json  day04.xml  day04complex.json  day04supercomplex.json  day04supersupercomplex.json
day05/: README.md  app.py  chat.py  chatbot_app copy.py  chatbot_app.py  conversation.json  day05_chatbot_app.py
day06/: README.md  new_chatbot_app.py
day07/: README.md  day07.py  packages.txt
day08/: README.md  app.py  app1.py
day08/chroma_db/: chroma.sqlite3
day09/: app.py
day10/: LLM.m4a  app.py  app10.py  app11.py  app12.py  app2.py  app3.py  app4.py  app5.py  app6.py  app7.py  app8.py  app9.py
day11/: README.md
myapp/: pyproject.toml
mypractices/: basics.py  day05learn.py  learn_gradio.py  write_md_file.md
mypractices/.gradio/flagged/: dataset1.csv
